<resources>
    <string name="app_name">VIBGYOR</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="violet">Violet</string>

    <color name="violet">#9400D3</color>
    <color name="yellow">#FFFF00</color>
    <color name="indigo">#4B0082</color>
    <color name="orange">#FF7F00</color>
    <color name="red">#FF0000</color>
    <color name="blue">#0000FF</color>
    <color name="green">#00FF00</color>

</resources>
