<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:id="@+id/red"
        android:layout_weight="1"
        android:background="@color/red"
        android:gravity="center"
        android:textSize="35dp"
        android:clickable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orange"
        android:id="@+id/orange"
        android:background="@color/orange"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="35dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        android:id="@+id/yellow"
        android:background="@color/yellow"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="35dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:id="@+id/green"
        android:background="@color/green"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="35dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:id="@+id/blue"
        android:background="@color/blue"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="35dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indigo"
        android:id="@+id/indigo"
        android:background="@color/indigo"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="35dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/violet"
        android:id="@+id/violet"
        android:background="@color/violet"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="35dp"/>

</LinearLayout>
